--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Welcome!
 
 This Group 2 repository is the project site for the NSC Spring 2022 IT 115, Group 2 team.
 
-We will publish content created for our class here.
+We will publish content created for our class here, as well as on our webpage located at http://35.172.215.125.
 
 Our team consists of:
 
